@@ -2,6 +2,7 @@ Version 10.1 - Carrier Command edition. 28 October 2021
 
 Added setting to change ULA Data bus value
 Added showing microdrive label when expanding qlay mdv files of size 174930 bytes
+Added action to trigger left-right movement on joystick, to play Decathlon-like games
 Improved portability of shell scripts
 Improved Debugging: now it highlights which registers will be modified by the opcode at the cursor position
 
